# github-management

./: README.md  pyproject.toml
src/ghm/: __init__.py  auth.py  main.py  repos.py
